	* configs/sim/nsh2: Add another simulated NSH configuration.  This one
	  supports X11 graphics, C++, and exercises graphic functions as built-in
	  commands.

6.11 2011-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* arch/arm/stm32/Make.defs:  Don't build stm32_rtc.c if CONFIG_RTC is not
	  selected.  Doing so will cause errors if other configuration dependencies
	  are not met.
	* configs/stm3210e-eval/src/up_lcd.c:  Color corrections for SPFD5408B LCD
	  do not work with R61580 LCD.
	* configs/pic32-starterkit: Beginning of a configuration for the Microchip
	  PIC32 Ethernet Starter Kit.  Hmmm.. I don't have a clue how to test this
	  with no serial port?!
	* lib/stdio/lib_fclose.c: fclose() always returns an error (EOF) when it
	  closes a read-only file.  This is because it calls flush() which will
	  fail on read-only files.  No harm is done other that a bad value is
	  returned.
	* arch/sim/src/Makefile: Correct build issue for sim/nsh2 target.  Old
	  libboard.a was not being cleaned.
	* arch/mips/src/pic32mx/pic32mx-gpio*.c:  Add GPIO support for the PIC32MX.
	* configs/sure-pic32mx/src/up_leds.c and up_buttons.c:  Add button and LED
	  support for the Sure Electronics PIC32MX board.
	* configs/ea3152:  Add a configuration for the Embedded Artists LPC3152
	  daughter board (with the same base-board used with configs/ea3131)
	* graphics/nxmu/nx_getrectangle.c, graphics/nxsu/nx_getrectangle.c,
	  graphics/mxtk/nx_getwindow.c, graphics/nxmu/nx_gettoobar.c:  New
	  interfaces to read from graphics memory
	* graphics/nxbe/nxbe_bitmap.c: Fix an error in the error handling that
	  can cause valid bitmaps to fail to render.
	* include/nuttx/rgbcolors.h: Fix errors in some 16- and 8-bit color
	  conversion macros.
	* tools/incdir.sh: Fix issues when g++ is used as the compiler.  It was
	  not being recognized and handled properly.
	* graphics/nxsu/nx_releasebkgdg.c: Fix a bad cast that was causing
	  problems with the backgournd window was released.